kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
  labels:
    name: game-2048
    app: 2048-game
